--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,15 @@
   }
 }
 
-.App-header {
+.header {
   background-color: #342834;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 24px;
+  color: black;
 }
 
 .App-link {
