--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
+.App-header {
+  position: sticky;
+  width: 100%;
+  font-family: serif;
+  font-size: 30px;
+  text-align: center;
+  background-color:pink;
+  color: white;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  
+}
+
+.Text-outline {
+  -webkit-text-stroke: 1.25px rgb(255, 95, 122);
+}
+
+.App-background {
+  color: pink
+}
+
+.content {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 30px;
+  margin: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.table {
+  border-collapse: separate;
+  border: 1px solid black;
+  font-family: 'Times New Roman', Times, serif;
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.table-head {
+  font-size: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+
 }
 
-.App-header {
-  background-color: #342834;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: 24px;
-  color: black;
+/* Edit the link states in a specific order */
+nav a {
+  color: rgb(255, 95, 122);
+  text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav a:focus {
+  font-weight: bold;
 }
